client/src/pages/Blogs/PostsList.module.css
/* Apply to all elements */
*,
*::before,
*::after {
  box-sizing: border-box;
}



.postlist_wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.postlist_wrapper ul li {
   list-style: none;
   min-width: 400px;
   color: #0b80ee;
   margin-bottom: 1rem;
}
 .link {
  display: flex;              /* flex container */
  flex-direction: row;         /* default, optional */
  justify-content: space-between; /* title left, date right */
  align-items: center;         /* vertical alignment */
  text-decoration: none;
  padding: 10px;
  border-bottom: 2px solid #241616;
  width: 100%;
  box-sizing: border-box;

}

.link p {
  margin: 0;    
 color: #0b80ee;
}


@media screen and (max-width:480px) {
  
 .postlist_wrapper{
    width: 100%;
    padding: 1rem;

}
.postlist_wrapper ul {
  margin: 0;
  padding: 0;
  width: 100%;
}
.postlist_wrapper ul li {
  width: 100%;
}

.postlist_wrapper h1 {
  font-size: 24px;
}
}

